@@ -58,6 +58,15 @@ describe Druid do
         end
         expect(msg).to eql 'I am an alert'
       end
+
+      it "should retrieve the text from confirm popup" do
+        allow(driver).to receive_message_chain(:alert, :exists?).and_return(true)
+        allow(driver).to receive_message_chain(:alert, :text).and_return('I am an confirm')
+        expect(driver).to receive_message_chain(:alert, :ok)
+        msg = druid.confirm(true) do
+        end
+        expect(msg).to eql 'I am an confirm'
+      end
     end
   end
 
